Update: Fully completed Version 1.0 of CashU. Integrated with Zapier, can track users, receive feedback, and created an about us page.

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 VITE_ZAPIER_WEBHOOK_URL = https://hooks.zapier.com/hooks/catch/15267167/36y1fho/
+VITE_ZAPIER_WEBHOOK_FEEDBACK_URL = https://hooks.zapier.com/hooks/catch/15267167/36o6ukl/
