--- a/client/.env
+++ b/client/.env
@@ -1,1 +1,2 @@
 VITE_ZAPIER_WEBHOOK_URL = https://hooks.zapier.com/hooks/catch/15267167/36y1fho/
+VITE_ZAPIER_WEBHOOK_FEEDBACK_URL = https://hooks.zapier.com/hooks/catch/15267167/36o6ukl/
