Update: CashU Final Version 2.0, created upcoming payments function, fixed calculator bugs, fixed styling, added blur to navbar background, and used Make instead of Zapier.

--- a/client/.env
+++ b/client/.env
@@ -1,2 +1,4 @@
 VITE_ZAPIER_WEBHOOK_URL = https://hooks.zapier.com/hooks/catch/15267167/36y1fho/
 VITE_ZAPIER_WEBHOOK_FEEDBACK_URL = https://hooks.zapier.com/hooks/catch/15267167/36o6ukl/
+VITE_MAKE_WEBHOOK_USER_EMAIL_URL = https://hook.eu1.make.com/fnx5p7ksbybjwb98j7tu6psund994fxv
+VITE_MAKE_WEBHOOK_USER_FEEDBACK_URL = https://hook.eu1.make.com/xvmjkl2rhuewo6i9zir7mk65ce0txsvm
